Fix header bar, and left/right align menu links
Add flex to header class to correctly align the links. Add CSS styling
to links to remove underlines and list bullets.
Still need to stop links from crushing together when resizing window

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -15,6 +15,8 @@ button {
   font-family: Roboto, sans-serif;
   border: none;
   border-radius: 8px;
+  margin: 2px;
+  padding: 8px 16px;
   background: #eee;
 }
 
@@ -25,3 +27,40 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 50px;
+  
+}
+
+.left-links, .right-links {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+  gap: 16px;
+  
+}
+
+a {
+  text-decoration: none;
+  color: grey;
+}
+
+/*.content {
+  border: 2px solid red;
+  margin: 100px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
